--- a/style.css
+++ b/style.css
@@ -101,3 +101,23 @@ address {
         text-decoration: none;
     }
 }
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    /* IE10+ CSS styles go here */
+    a {
+        font-weight: 300;
+    }
+    address {
+        font-weight: 300;
+    }
+}
+
+@supports (-ms-accelerator:true) {
+    /* IE Edge 12+ CSS styles go here */
+    a {
+        font-weight: 300;
+    }
+    address {
+        font-weight: 300;
+    }
+}
