--- a/style.css
+++ b/style.css
@@ -96,6 +96,9 @@ address {
 }
 
 @media only screen and (max-device-width: 768px) {
+    header {
+        margin-top: 5vh;
+    }
     svg {
         margin-bottom: -50px;
     }
@@ -107,6 +110,9 @@ address {
     }
     address, a {
         font-weight: 300;
+    }
+    address {
+        margin-bottom: 5vh;
     }
     a {
         text-decoration: none;
