--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@
 body {
     background-color: black;
     color: white;
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
+    font-family: 'Lato', Helvetica, sans-serif;
+    font-weight: 100;
     text-align: center;
 }
 
