--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ h1.advisorygroup {
     font-size: 1.6em;
     margin-top: -0.5em;
     margin-bottom: 2em;
+    font-weight: normal;
 }
 
 address {
