--- a/style.css
+++ b/style.css
@@ -92,6 +92,13 @@ address {
 section {
     overflow: scroll;
     white-space: nowrap;
+
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+}
+
+section::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
 }
 
 section h2 {
